--- a/src/app/employee/components/custom-select-dropdown/custom-select-dropdown.component.html
+++ b/src/app/employee/components/custom-select-dropdown/custom-select-dropdown.component.html
@@ -1,3 +1,4 @@
+<div>{{label}}</div>
 <select class="form-select" [disabled]="isDisabled" (change)="onSelectChange($event)">
   <option *ngFor="let option of stateOptions" [value]="option[bindValue]" [selected]="option[bindValue] == value">
     {{option[bindLabel]}}
