--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
   <a class="navbar-brand" [routerLink]="['/']">Home</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -11,6 +11,29 @@
         <a *ngFor="let url of routingUrls" class="nav-link" [routerLink]="[url.key]">{{url.value}}</a>
       </li>
     </ul>
+    <div class="d-flex ms-auto">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fa-solid fa-user"></i>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
+          <li>
+            <a class="dropdown-item" [routerLink]="['/auth']">
+              <i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>
+              Sign in
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" [routerLink]="['/auth/register']">
+              <i class="fa-solid fa-arrow-right-from-bracket pe-2"></i>
+              Sign up
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </nav>
 <router-outlet></router-outlet>
