--- a/src/app/employee/components/input-form-control/input-form-control.component.html
+++ b/src/app/employee/components/input-form-control/input-form-control.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
-  <label for="fullName">{{label}}</label>
-  <input type="text" class="form-control" id="fullName" [value]="value" [disabled]="isDisabled"
+  <label for="{{fieldName}}">{{label}}</label>
+  <input type="text" class="form-control" id="{{fieldName}}" [value]="value" [disabled]="isDisabled"
     (input)="onChange($event)" (blur)="touched()"
     [class.is-invalid]="formField.invalid && (formField.dirty || formField.touched)">
 
