--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,9 +6,16 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item d-flex">
-        <a *ngFor="let url of routingUrls" class="nav-link" [routerLink]="[url.key]">{{url.value}}</a>
-      </li>
+      <ng-container *ngIf="(isAuthenticated | async); else otherTemplate">
+        <li class=" nav-item d-flex">
+          <a *ngFor="let url of routingUrls" class="nav-link" [routerLink]="[url.key]">{{url.value}}</a>
+        </li>
+      </ng-container>
+      <ng-template #otherTemplate>
+        <li class=" nav-item d-flex">
+          <a class="nav-link" [routerLink]="['auth/register']">Register</a>
+        </li>
+      </ng-template>
     </ul>
     <div class="d-flex ms-auto">
       <div class="dropdown">
@@ -19,9 +26,9 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
           <ng-container *ngIf="(isAuthenticated | async); else restTemplate">
             <li>
-              <a class="dropdown-item" [routerLink]="['/auth']">
-                <i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>
-                Sign in
+              <a class="dropdown-item" (click)="logout()">
+                <i class="fa-solid fa-arrow-right-from-bracket pe-2"></i>
+                logout
               </a>
             </li>
             <!-- <li>
@@ -33,11 +40,12 @@
           </ng-container>
           <ng-template #restTemplate>
             <li>
-              <a class="dropdown-item" (click)="logout()">
-                <i class="fa-solid fa-arrow-right-from-bracket pe-2"></i>
-                logout
+              <a class="dropdown-item" [routerLink]="['/auth']">
+                <i class="fa-solid fa-arrow-right-to-bracket pe-2"></i>
+                Sign in
               </a>
             </li>
+
           </ng-template>
         </ul>
       </div>
